# german-ai-tutor-monorepo

./: .env.example  .gitignore  GRAMMAR_REMOVAL_SUMMARY.md  Jenkinsfile  LESSON_ARCHITECTURE_MIGRATION.md  LESSON_MIGRATION_STATUS.md  PROJECT_RULES.md  README.md  REFACTOING_PLAN.md  app.py  billing.py  capacitor.config.json  database.py  docker-compose.override.yml  docker-compose.yml  migrate_sqlite_to_postgres.sh  services.py  text-jenkins.txt  voicelist.py
backend/: .flake8  ADMIN_INTERFACE.md  AI_MODELS_GUIDE.md  Dockerfile  README.md  check_postgres.py  create_tables.py  fix_sequences.py  flake8_report.txt  migrate_add_context_translations.py  migrate_add_custom_vocab_prompt.py  migrate_asyncpg.py  migrate_data.py  migrate_final.py  migrate_sql.py  migrate_update_custom_vocab_prompt.py  migrate_v2.py  pyproject.toml  pytest_report.xml  regenerate_audio.py  test_api_gender_response.py  test_own_text_flow.py  tts_voices_endpoint.py
backend/app/: billing.py  billing_logic.py  cost_calculation.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py  services.py  ssml_utils.py  utils_tts.py
backend/app/migrations/: migrate_add_cost_to_lessons.py  migrate_add_create_own_text_prompt.py  migrate_add_created_at_vocabulary.py  migrate_add_custom_title.py  migrate_add_dictation_progress.py  migrate_add_explained_sentences.py  migrate_add_explained_words.py  migrate_add_lesson_tables.py  migrate_add_llm_tts_models.py  (+10 more)
backend/scripts/: generate_audio_batch.py
backend/tests/: conftest.py  test_api.py  test_fixtures.py  test_utils.py
(+181 files in other folders)
